polish dao and model
